gitops/apps/costwatch/components/sso/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: costwatch-sso
  labels:
    app: costwatch-sso
spec:
  selector:
    app: costwatch-sso
  ports:
    - name: http
      port: 80
      targetPort: http
